<resources>
    <string name="app_name">Consumo</string>
    <string name="total">R$0,00</string>
    <string name="distanceEdit">Distância</string>
    <string name="kilometer">Total de quilômetros</string>
    <string name="priceEdit">Preço</string>
    <string name="pricePerLiter">Preço por litro</string>
    <string name="autonomyEdit">Quilômetros por litros</string>
    <string name="autonomy">Autonomia</string>
    <string name="stringGasto">Seu Gasto total será de:</string>
    <string name="calcular">Calcular</string>
</resources>